--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.0'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
 }
-
 
 apply plugin: 'com.google.gms.google-services'
