--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,17 @@
     <permission
         android:name=".permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
+
     <uses-permission android:name=".permission.C2D_MESSAGE" />
 
     <application
-        android:debuggable="true"
         android:name=".Global"
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -27,10 +27,10 @@
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".ui.LoginActivity" />
         <activity
@@ -59,9 +59,11 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
                 <category android:name="com.youtube.sorcjc.proyectoprofesionales" />
             </intent-filter>
         </receiver>
+
         <service
             android:name=".io.gcm.MyGcmListenerService"
             android:exported="false">
@@ -78,8 +80,9 @@
         </service>
         <service
             android:name=".io.gcm.RegistrationIntentService"
-            android:exported="false">
-        </service>
+            android:exported="false"></service>
+
+        <activity android:name=".ui.ConfirmRegisterActivity"></activity>
     </application>
 
 </manifest>
