--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
         android:allowBackup="true"
         android:debuggable="true"
         android:icon="@mipmap/ic_launcher"
-        android:logo="@drawable/logo"
         android:label="@string/app_name"
+        android:logo="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
@@ -34,7 +34,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.homesolution.app.ui.RegisterActivity" />
+        <activity android:name="com.homesolution.app.ui.RegisterActivity"
+            android:windowSoftInputMode="stateHidden"/>
         <activity android:name="com.homesolution.app.ui.ConfirmRegisterActivity" />
         <activity android:name="com.homesolution.app.ui.LoginActivity" />
         <activity
